<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group
            android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_chapters"
                    android:icon="@drawable/ic_local_library_black_24dp"
                    android:title="@string/fragment_chapters" />
                <item
                    android:id="@+id/nav_favourites"
                    android:icon="@drawable/ic_favorite_black_24dp"
                    android:title="@string/fragment_favorites" />
                <item
                    android:id="@+id/nav_about_blog"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/fragment_about_blog" />
        </group>
</menu>
